<?xml version="1.0"?>
<package format="2">
  <name>fcl_examples</name>
  <version>0.0.0</version>
  <description>The fcl_examples package</description>
  <maintainer email="groadpg@gmail.com">RyodoTanaka</maintainer>

  <license>BSD</license>

  <url type="repository">http://github.com/RyodoTanaka/fcl_examples</url>
  <author email="groadpg@gmail.com">RyodoTanaka</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>fcl</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>fcl</exec_depend>

  <export>
  </export>

</package>
